Add an error message if the input fields are empty

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <link href='css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-    <link href='css/stylles.css' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href='css/styles.css' rel='stylesheet' type='text/css'>
     <title>Word Frequency</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             <br>
             <input id='input2' name='input2' type='text' class='form-control' placeholder='Enter a word in the sentence'>
             <br>
-            <button type='submit' class='btn btn-lg btn-success'>Go!</button>
+            <button type='submit' class='btn btn-lg btn-default'>Go!</button>
         </form>
     </div>
 </body>
