Add css to the user interface

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -16,7 +16,7 @@
             <br>
             <input id='input2' name='input2' type='text' class='form-control' placeholder='Enter a word in the sentence'>
             <br>
-            <button type='submit' class='btn btn-lg btn-default'>Go!</button>
+            <button type='submit' class='btn btn-lg'>Go!</button>
         </form>
     </div>
 </body>
