--- a/views/output.html.twig
+++ b/views/output.html.twig
@@ -21,7 +21,7 @@
         </h3>
         <form action='/' method='get'>
             <br>
-            <button type='submit' class='btn btn-lg btn-default'>Back</button>
+            <button type='submit' class='btn btn-lg'>Back</button>
         </form>
     </div>
 </body>
