--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,19 +1,33 @@
 body {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
+    background-color:  #e6f3ff;
 }
-
 h2 {
-    font-size: 25px;
+    font-size: 20px;
     margin-bottom: 30px;
     margin-top: 0;
+}
+button {
+    background-color: #004480;
+    color: #fff;
+}
+button:hover {
+    background-color: #80c3ff;
+    color: #fff;
 }
 
 .container {
     border-radius: 15px;
-    background-color: #e6ffff;
+    background-color: #fff;
     box-shadow: 5px 5px 5px  #d9d9d9;
     padding: 30px;
     width: 600px;
     margin-top: 10%;
+}
+@media (max-width: 700px) {
+    .container {
+        width: 100%;
+        margin-top: 30%;
+    }
 }
